src/test/ui/rust-2018/uniform-paths/issue-54253.stderr
error[E0432]: unresolved import `crate::version`
  --> $DIR/issue-54253.rs:10:9
   |
LL |     use crate::version;
   |         ^^^^^^^^^^^^^^ no `version` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
